; ModuleID = '/home/carl/AnghaBench/linux/net/sunrpc/extr_svc.c_svc_stop_kthreads.c'
source_filename = "/home/carl/AnghaBench/linux/net/sunrpc/extr_svc.c_svc_stop_kthreads.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_serv = type { i32 }
%struct.svc_pool = type { i32 }
%struct.task_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.svc_serv*, %struct.svc_pool*, i32)* @svc_stop_kthreads to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @svc_stop_kthreads(%struct.svc_serv* %0, %struct.svc_pool* %1, i32 %2) #0 {
  %4 = alloca %struct.svc_serv*, align 8
  %5 = alloca %struct.svc_pool*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.task_struct*, align 8
  %8 = alloca i32, align 4
  store %struct.svc_serv* %0, %struct.svc_serv** %4, align 8
  store %struct.svc_pool* %1, %struct.svc_pool** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.svc_serv*, %struct.svc_serv** %4, align 8
  %10 = getelementptr inbounds %struct.svc_serv, %struct.svc_serv* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sub nsw i32 %11, 1
  store i32 %12, i32* %8, align 4
  br label %13

13:                                               ; preds = %25, %3
  %14 = load %struct.svc_serv*, %struct.svc_serv** %4, align 8
  %15 = load %struct.svc_pool*, %struct.svc_pool** %5, align 8
  %16 = call %struct.task_struct* @choose_victim(%struct.svc_serv* %14, %struct.svc_pool* %15, i32* %8)
  store %struct.task_struct* %16, %struct.task_struct** %7, align 8
  %17 = load %struct.task_struct*, %struct.task_struct** %7, align 8
  %18 = icmp eq %struct.task_struct* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  br label %28

20:                                               ; preds = %13
  %21 = load %struct.task_struct*, %struct.task_struct** %7, align 8
  %22 = call i32 @kthread_stop(%struct.task_struct* %21)
  %23 = load i32, i32* %6, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %6, align 4
  br label %25

25:                                               ; preds = %20
  %26 = load i32, i32* %6, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %13, label %28

28:                                               ; preds = %25, %19
  ret i32 0
}

declare dso_local %struct.task_struct* @choose_victim(%struct.svc_serv*, %struct.svc_pool*, i32*) #1

declare dso_local i32 @kthread_stop(%struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
